--- a/CRM/Views/Shared/_MasterLayout.cshtml
+++ b/CRM/Views/Shared/_MasterLayout.cshtml
@@ -2,14 +2,15 @@
 
 <head>
     <title>College CRM</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/MasterResponsive.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/Master.css" />
-    <link href="css/Student.css" rel="stylesheet" />
+    <link href="css/Registration.css" rel="stylesheet" />
     <script src="js/jquery.min.js"></script>
     <script src="js/Master.js"></script>
 
-    <!--https://www.svgrepo.com/collection/chunk-16px-thick-interface-icons/-->
+
 
 </head>
 
@@ -17,22 +18,22 @@
     <header>
         <div class="logosec">
             <div class="logo">College CRM</div>
-            <img src="img/hamerLine.svg"
+            <img src="https://media.College CRM.org/wp-content/uploads/20221210182541/Untitled-design-(30).png"
                  class="icn menuicn" id="menuicn" alt="menu-icon" />
         </div>
         <div class="searchbar">
             <input type="text" placeholder="Search" />
             <div class="searchbtn">
-                <img src="img/Search.svg"
+                <img src="https://media.College CRM.org/wp-content/uploads/20221210180758/Untitled-design-(28).png"
                      class="icn srchicn" alt="search-icon" />
             </div>
         </div>
 
         <div class="message">
             <div class="circle"></div>
-            <img src="img/Search.svg" class="icn" alt="" />
+            <img src="https://media.College CRM.org/wp-content/uploads/20221210183322/8.png" class="icn" alt="" />
             <div class="dp">
-                <img src="img/Admin.svg"
+                <img src="https://media.College CRM.org/wp-content/uploads/20221210180014/profile-removebg-preview.png"
                      class="dpicn" alt="dp" />
             </div>
         </div>
@@ -72,11 +73,10 @@
                 </div>
             </nav>
         </div>
-
         @RenderBody()
+
     </div>
 
-    <script src="./index.js"></script>
 </body>
 
 </html>
