--- a/CRM/Views/Master/Course.cshtml
+++ b/CRM/Views/Master/Course.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CRM.Models.MstClass>
+﻿@model IEnumerable<CRM.Models.MstCourse>
 
 @{
     Layout = "~/Views/Shared/_MasterLayout.cshtml";
@@ -10,7 +10,7 @@
 
         <!-- Create Form -->
         <div>
-            <label>Class Name</label>
+            <label>Course Name</label>
             <input type="text" id="className" class="wide-input" />
             <button onclick="saveClass()">Submit</button>
         </div>
@@ -22,7 +22,7 @@
             <thead>
                 <tr>
                     <th>Sr No</th>
-                    <th>Class Name</th>
+                    <th>Course Name</th>
                     <th>Create By</th>
                     <th>Create Date</th>
                     <th>Edit</th>
@@ -37,9 +37,9 @@
                 {
                     <tr>
                         <td>@i</td>
-                        <td>@item.Name</td>
-                        <td>@item.CreateBy</td>
-                        <td>@item.CreateDatetime</td>
+                        <td>@item.CourseName</td>
+                        <td>@item.CreatedBy</td>
+                        <td>@item.CreatedDatetime</td>
                         <td>
                             <button onclick="editClass(@item.Id)">Edit</button>
                         </td>
@@ -71,11 +71,11 @@
             var name = $("#className").val();
 
             if (name.trim() === "") {
-                alert("Class name required");
+                alert("Course name required");
                 return;
             }
 
-            $.post("https://localhost:44382/Master/Create", { className: name }, function (res) {
+            $.post("https://localhost:44382/Master/CoursePost", { className: name }, function (res) {
                 if (res.success) location.reload();
                 else alert(res.message);
             });
@@ -83,7 +83,7 @@
 
         // OPEN EDIT POPUP
         function editClass(id) {
-            $.get("https://localhost:44382/Master/Get?id=" + id, function (data) {
+            $.get("https://localhost:44382/Master/GetCourse?id=" + id, function (data) {
                 $("#editId").val(data.id);
                 $("#editName").val(data.name);
                 $("#editModal").show();
@@ -92,7 +92,7 @@
 
         // UPDATE
         function updateClass() {
-            $.post("https://localhost:44382/Master/Update",
+            $.post("https://localhost:44382/Master/UpdateCourse",
                 {
                     id: $("#editId").val(),
                     className: $("#editName").val()
