--- a/CRM/Views/Course/Index.cshtml
+++ b/CRM/Views/Course/Index.cshtml
@@ -26,11 +26,13 @@
                 <!-- left column -->
                 <div class="col-md-12">
 
-                    <div>
-                        <label>Course Name</label>
-                        <input type="text" id="className" class="wide-input" />
-                        <button onclick="saveClass()">Submit</button>
-                    </div>
+                    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#modal-default">
+                        Add new Course
+                    </button>
+
+                   
+
+
 
                     <!-- general form elements -->
                     <div class="card card-primary">
@@ -60,10 +62,10 @@
                                         <td>@item.CreatedBy</td>
                                         <td>@item.CreatedDatetime</td>
                                         <td>
-                                            <button onclick="editClass(@item.Id)">Edit</button>
+                                            <button  data-toggle="modal" data-target="#editModal" onclick="editClass(@item.Id)"> <i class="fas fa-edit"></i> Edit</button>
                                         </td>
                                         <td>
-                                            <button onclick="deleteClass(@item.Id)">Delete</button>
+                                            <button class="btn btn-success" onclick="deleteClass(@item.Id)">Delete</button>
                                         </td>
                                     </tr>
                                     i++;
@@ -72,16 +74,6 @@
                         </table>
 
                     </div>
-
-
-                    <div id="editModal" style="display:none; position:fixed; left:30%; top:20%; padding:20px; background:white; border:1px solid #ccc;">
-                        <h3>Edit Class</h3>
-                        <input type="hidden" id="editId" />
-                        <label>Name:</label>
-                        <input type="text" id="editName" />
-                        <button onclick="updateClass()">Update</button>
-                        <button onclick="closeModal()">Close</button>
-                    </div>
                 </div>
             </div>
             <!-- /.row -->
@@ -89,6 +81,65 @@
     </section>
     <!-- /.content -->
 </div>
+
+
+
+@*Modal Popup Start*@
+
+
+<div class="modal fade" id="editModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Edit Class</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <input type="hidden" id="editId" />
+                    <label>Class Name</label>
+                    <input type="text" class="form-control" id="editName" />
+                </div>
+            </div>
+            <div class="modal-footer justify-content-between">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="updateClass()">Update</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+
+
+<div class="modal fade" id="modal-default">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Add New Class</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label>Course Name</label>
+                    <input type="text" id="className" class="form-control" />
+                </div>
+            </div>
+            <div class="modal-footer justify-content-between">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="saveClass()"><i class="fas fa-save"></i> Save changes</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+@*Model popup End*@
+
 
 
 
@@ -113,7 +164,7 @@
         function editClass(id) {
             $.get("https://localhost:44382/Course/GetCourse?id=" + id, function (data) {
                 $("#editId").val(data.id);
-                $("#editName").val(data.name);
+                $("#editName").val(data.courseName);
                 $("#editModal").show();
             });
         }
@@ -138,10 +189,11 @@
         // DELETE
         function deleteClass(id) {
             if (confirm("Are you sure?")) {
-                $.post("https://localhost:44382/Course/Delete", { id: id }, function () {
+                $.post("https://localhost:44382/Course/DeleteCourse", { id: id }, function (res) {
                     location.reload();
                 });
             }
         }
+
     </script>
 }
