--- a/CRM/Views/Master/Index.cshtml
+++ b/CRM/Views/Master/Index.cshtml
@@ -4,65 +4,145 @@
     Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
 
-<div class="main">
-    <div class="register-container">
-        <h2>Class Master</h2>
 
-        <!-- Create Form -->
-        <div>
-            <label>Class Name11</label>
-            <input type="text" id="className" class="wide-input" />
-            <button onclick="saveClass()">Submit</button>
+<div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+                <div class="col-sm-6">
+                    <ol class="breadcrumb float-sm-left">
+                        <li class="breadcrumb-item active"><a href="#">Class</a></li>
+                    </ol>
+                </div>
+            </div>
+        </div><!-- /.container-fluid -->
+    </section>
+
+    <!-- Main content -->
+    <section class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <!-- left column -->
+                <div class="col-md-12">
+
+                    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#modal-default">
+                        Add new Class
+                    </button>
+
+
+
+
+
+                    <!-- general form elements -->
+                    <div class="card card-primary">
+
+
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th style="width: 10px">#</th>
+                                    <th>Class Name</th>
+                                    <th>Create By</th>
+                                    <th>Create Date</th>
+                                    <th>Edit</th>
+                                    <th>Delete</th>
+
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @{
+                                    int i = 1;
+                                }
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>@i</td>
+                                        <td>@item.Name</td>
+                                        <td>@item.CreateBy</td>
+                                        <td>@item.CreateDatetime</td>
+                                        <td>
+                                            <button data-toggle="modal" data-target="#editModal" onclick="editClass(@item.Id)"> <i class="fas fa-edit"></i> Edit</button>
+                                        </td>
+                                        <td>
+                                            <button class="btn btn-success" onclick="deleteClass(@item.Id)">Delete</button>
+                                        </td>
+                                    </tr>
+                                    i++;
+                                }
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
+            </div>
+            <!-- /.row -->
+        </div><!-- /.container-fluid -->
+    </section>
+    <!-- /.content -->
+</div>
+
+
+
+@*Modal Popup Start*@
+
+
+<div class="modal fade" id="editModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Edit Class</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <input type="hidden" id="editId" />
+                    <label>Class Name</label>
+                    <input type="text" class="form-control" id="editName" />
+                </div>
+            </div>
+            <div class="modal-footer justify-content-between">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="updateClass()">Update</button>
+            </div>
         </div>
-
-        <br />
-
-        <!-- Data Table -->
-        <table class="grid-table">
-            <thead>
-                <tr>
-                    <th>Sr No</th>
-                    <th>Class Name</th>
-                    <th>Create By</th>
-                    <th>Create Date</th>
-                    <th>Edit</th>
-                    <th>Delete</th>
-                </tr>
-            </thead>
-            <tbody id="classTable">
-                @{
-                    int i = 1;
-                }
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>@i</td>
-                        <td>@item.Name</td>
-                        <td>@item.CreateBy</td>
-                        <td>@item.CreateDatetime</td>
-                        <td>
-                            <button onclick="editClass(@item.Id)">Edit</button>
-                        </td>
-                        <td>
-                            <button onclick="deleteClass(@item.Id)">Delete</button>
-                        </td>
-                    </tr>
-                    i++;
-                }
-            </tbody>
-        </table>
+        <!-- /.modal-content -->
     </div>
+    <!-- /.modal-dialog -->
 </div>
 
-<!-- EDIT POPUP -->
-<div id="editModal" style="display:none; position:fixed; left:30%; top:20%; padding:20px; background:white; border:1px solid #ccc;">
-    <h3>Edit Class</h3>
-    <input type="hidden" id="editId" />
-    <label>Name:</label>
-    <input type="text" id="editName" />
-    <button onclick="updateClass()">Update</button>
-    <button onclick="closeModal()">Close</button>
+
+<div class="modal fade" id="modal-default">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Add New Class</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label>Course Name</label>
+                    <input type="text" id="className" class="form-control" />
+                </div>
+            </div>
+            <div class="modal-footer justify-content-between">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="saveClass()"><i class="fas fa-save"></i> Save changes</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
 </div>
+@*Model popup End*@
+
+
+
+
 
 @section Scripts {
     <script type="text/javascript">
