--- a/CRM/Views/Suject/Index.cshtml
+++ b/CRM/Views/Suject/Index.cshtml
@@ -1,119 +1,83 @@
-﻿@model IEnumerable<CRM.Models.MstCourse>
+﻿@model IEnumerable<CRM.Models.MstSubject>
 
 @{
     Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
 
-<div class="main">
-    <div class="register-container">
-        <h2>Class Master</h2>
 
-        <!-- Create Form -->
-        <div>
-            <label>Course Name</label>
-            <input type="text" id="className" class="wide-input" />
-            <button onclick="saveClass()">Submit</button>
-        </div>
+<div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+                <div class="col-sm-6">
+                    <ol class="breadcrumb float-sm-left">
+                        <li class="breadcrumb-item active"><a href="#">Subject</a></li>
+                    </ol>
+                </div>
+            </div>
+        </div><!-- /.container-fluid -->
+    </section>
 
-        <br />
+    <!-- Main content -->
+    <section class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <!-- left column -->
+                <div class="col-md-12">
 
-        <!-- Data Table -->
-        <table class="grid-table">
-            <thead>
-                <tr>
-                    <th>Sr No</th>
-                    <th>Course Name</th>
-                    <th>Create By</th>
-                    <th>Create Date</th>
-                    <th>Edit</th>
-                    <th>Delete</th>
-                </tr>
-            </thead>
-            <tbody id="classTable">
-                @{
-                    int i = 1;
-                }
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>@i</td>
-                        <td>@item.CourseName</td>
-                        <td>@item.CreatedBy</td>
-                        <td>@item.CreatedDatetime</td>
-                        <td>
-                            <button onclick="editClass(@item.Id)">Edit</button>
-                        </td>
-                        <td>
-                            <button onclick="deleteClass(@item.Id)">Delete</button>
-                        </td>
-                    </tr>
-                    i++;
-                }
-            </tbody>
-        </table>
-    </div>
+                    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#modal-default">
+                        Add new Course
+                    </button>
+
+
+
+
+
+                    <!-- general form elements -->
+                    <div class="card card-primary">
+
+
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th style="width: 10px">#</th>
+                                    <th>Subject Name</th>
+                                    <th>Course</th>
+                                    <th>Class</th>
+                                    <th>Edit</th>
+                                    <th>Delete</th>
+
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @{
+                                    int i = 1;
+                                }
+                                @foreach (var item in Model)
+                                {
+                                <tr>
+                                    <td>@i</td>
+                                    <td>@item.Name</td>
+                                    <td>@item.Course</td>
+                                    <td>@item.Class</td>
+                                    <td>
+                                        <button data-toggle="modal" data-target="#editModal" onclick="editClass(@item.Id)"> <i class="fas fa-edit"></i> Edit</button>
+                                    </td>
+                                    <td>
+                                        <button class="btn btn-success" onclick="deleteClass(@item.Id)">Delete</button>
+                                    </td>
+                                </tr>
+                                    i++;
+                                }
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
+            </div>
+            <!-- /.row -->
+        </div><!-- /.container-fluid -->
+    </section>
+    <!-- /.content -->
 </div>
-
-<!-- EDIT POPUP -->
-<div id="editModal" style="display:none; position:fixed; left:30%; top:20%; padding:20px; background:white; border:1px solid #ccc;">
-    <h3>Edit Class</h3>
-    <input type="hidden" id="editId" />
-    <label>Name:</label>
-    <input type="text" id="editName" />
-    <button onclick="updateClass()">Update</button>
-    <button onclick="closeModal()">Close</button>
-</div>
-
-@section Scripts {
-    <script type="text/javascript">
-        // INSERT
-        function saveClass() {
-            var name = $("#className").val();
-
-            if (name.trim() === "") {
-                alert("Course name required");
-                return;
-            }
-
-            $.post("https://localhost:44382/Course/CoursePost", { className: name }, function (res) {
-                if (res.success) location.reload();
-                else alert(res.message);
-            });
-        }
-
-        // OPEN EDIT POPUP
-        function editClass(id) {
-            $.get("https://localhost:44382/Course/GetCourse?id=" + id, function (data) {
-                $("#editId").val(data.id);
-                $("#editName").val(data.name);
-                $("#editModal").show();
-            });
-        }
-
-        // UPDATE
-        function updateClass() {
-            $.post("https://localhost:44382/Course/UpdateCourse",
-                {
-                    id: $("#editId").val(),
-                    className: $("#editName").val()
-                },
-                function (res) {
-                    if (res.success) location.reload();
-                    else alert(res.message);
-                });
-        }
-
-        function closeModal() {
-            $("#editModal").hide();
-        }
-
-        // DELETE
-        function deleteClass(id) {
-            if (confirm("Are you sure?")) {
-                $.post("https://localhost:44382/Course/Delete", { id: id }, function () {
-                    location.reload();
-                });
-            }
-        }
-    </script>
-}
