--- a/CRM/Views/Master/Index.cshtml
+++ b/CRM/Views/Master/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_MasterLayout.cshtml";
+    var baseUrl = ViewBag.BaseUrl;
 }
 
 
@@ -147,6 +148,7 @@
 @section Scripts {
     <script type="text/javascript">
         // INSERT
+        var BASE_URL = "@baseUrl";
         function saveClass() {
             var name = $("#className").val();
 
