--- a/CRM/Views/Suject/Index.cshtml
+++ b/CRM/Views/Suject/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@model IEnumerable<CRM.Models.MstSubject>
+﻿@model CRM.ModelsForView.SubjectViewModel
 
 @{
     Layout = "~/Views/Shared/_MasterLayout.cshtml";
+    var baseUrl = ViewBag.BaseUrl;
 }
 
 
@@ -54,20 +55,20 @@
                                 @{
                                     int i = 1;
                                 }
-                                @foreach (var item in Model)
+                                @foreach (var item in Model.SubjectList)
                                 {
-                                <tr>
-                                    <td>@i</td>
-                                    <td>@item.Name</td>
-                                    <td>@item.Course</td>
-                                    <td>@item.Class</td>
-                                    <td>
-                                        <button data-toggle="modal" data-target="#editModal" onclick="editClass(@item.Id)"> <i class="fas fa-edit"></i> Edit</button>
-                                    </td>
-                                    <td>
-                                        <button class="btn btn-success" onclick="deleteClass(@item.Id)">Delete</button>
-                                    </td>
-                                </tr>
+                                    <tr>
+                                        <td>@i</td>
+                                        <td>@item.Name</td>
+                                        <td>@item.Course</td>
+                                        <td>@item.Class</td>
+                                        <td>
+                                            <button data-toggle="modal" data-target="#editModal" onclick="editClass(@item.Id)"> <i class="fas fa-edit"></i> Edit</button>
+                                        </td>
+                                        <td>
+                                            <button class="btn btn-success" onclick="deleteClass(@item.Id)">Delete</button>
+                                        </td>
+                                    </tr>
                                     i++;
                                 }
                             </tbody>
@@ -81,3 +82,149 @@
     </section>
     <!-- /.content -->
 </div>
+
+
+
+@*Modal Popup Start*@
+
+
+<div class="modal fade" id="editModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Edit Class</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <input type="hidden" id="editId" />
+                    <label>Class Name</label>
+                    <input type="text" class="form-control" id="editName" />
+                </div>
+            </div>
+            <div class="modal-footer justify-content-between">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="updateClass()">Update</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+
+
+<div class="modal fade" id="modal-default">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Add New Class</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label>Subject Name</label>
+                    <input id="txtName" type="text" asp-for="Name" class="form-control"/>
+                </div>
+
+                <div class="form-group">
+                    <label>Select Class</label>
+                    <select id="ddlClass" asp-for="SelectedClass" asp-items="Model.ClassList" class="form-control"></select>
+                </div>
+
+                <div class="form-group">
+                    <label>Select Course</label>
+                    <select id="ddlSubject" asp-for="SelectedCourse" asp-items="Model.CourseList" class="form-control"></select>
+                </div>
+            </div>
+            <div class="modal-footer justify-content-between">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="saveClass()"><i class="fas fa-save"></i> Save changes</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+@*Model popup End*@
+
+
+
+
+@section Scripts {
+    <script type="text/javascript">
+        // INSERT
+
+        var BASE_URL = "@baseUrl";
+
+        function saveClass() {
+
+           
+
+            var name = $("#txtName").val();
+            var className = $('#ddlClass option:selected').text();
+            var courseName = $('#ddlSubject option:selected').text();
+
+            $.post(BASE_URL + "/Suject/CreateSubject", {
+                Name: name,
+                SelectedClass: className,
+                SelectedCourse: courseName
+            }, function (res) {
+                $('#modal-default').modal('hide');
+                location.reload();
+                Swal.fire({
+                    icon: 'success',
+                    title: 'Success!',
+                    text: 'Subject saved successfully!'
+                });
+            });
+        }
+
+        // OPEN EDIT POPUP
+        function editClass(id) {
+            $.get(BASE_URL + "/Suject/GetCourse?id=" + id, function (data) {
+                $("#editId").val(data.id);
+                $("#editName").val(data.courseName);
+                $("#editModal").show();
+            });
+        }
+
+        // UPDATE
+        function updateClass() {
+            $.post(BASE_URL + "/Suject/UpdateCourse",
+                {
+                    id: $("#editId").val(),
+                    className: $("#editName").val()
+                },
+                function (res) {
+                    if (res.success) location.reload();
+                    else alert(res.message);
+                });
+        }
+
+        function closeModal() {
+            $("#editModal").hide();
+        }
+
+        // DELETE
+        function deleteClass(id) {
+            if (confirm("Are you sure?")) {
+                $.post(BASE_URL + "/Suject/DeleteSubject", { id: id }, function (res) {
+                    location.reload();
+                    Swal.fire({
+                        icon: 'success',
+                        title: 'Success!',
+                        text: 'Subject delete successfully!'
+                    });
+                });
+            }
+        }
+
+    </script>
+}
+
+
+
