worked on dashboard

--- a/CRM/Views/Home/Index.cshtml
+++ b/CRM/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
             <div class="card-body">
                 <p class="login-box-msg">Sign in to start your session</p>
 
-                <form asp-controller="Course" asp-action="Index" method="post">
+                <form asp-controller="Dashboard" asp-action="Index" method="post">
                     <div class="input-group mb-3">
                         <input type="email" class="form-control" placeholder="UserName">
                         <div class="input-group-append">
