--- a/CRM/Views/Shared/_MasterLayout.cshtml
+++ b/CRM/Views/Shared/_MasterLayout.cshtml
@@ -177,7 +177,7 @@
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
 
                     <div class="info">
-                        <a href="#" class="d-block">Menu</a>
+                        <a href="../Dashboard" class="d-block">Dashboard</a>
                     </div>
                 </div>
                 <!-- Sidebar Menu -->
@@ -238,9 +238,9 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../layout/top-nav.html" class="nav-link">
+                                    <a href="../Student/List" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Update Details</p>
+                                        <p>List</p>
                                     </a>
                                 </li>
 
