--- a/CRM/Views/Shared/_MasterLayout.cshtml
+++ b/CRM/Views/Shared/_MasterLayout.cshtml
@@ -213,9 +213,9 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../Course" class="nav-link">
+                                    <a href="../Fee" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Course Class Subject</p>
+                                        <p>Fee Type</p>
                                     </a>
                                 </li>
 
