--- a/CRM/Views/Student/Index.cshtml
+++ b/CRM/Views/Student/Index.cshtml
@@ -115,7 +115,7 @@
                                         <div class="col-md-4">
                                             <div class="form-group">
                                                 <label>Class</label>
-                                                <select id="ddlClass" asp-for="SelectedClass" asp-items="Model.ClassList" class="form-control"></select>
+                                                <select id="ddlClass" asp-for="Class" asp-items="Model.ClassList" class="form-control"></select>
                                             </div>
                                         </div>
 
@@ -132,7 +132,7 @@
                                         <div class="col-md-4">
                                             <div class="form-group">
                                                 <label>Course</label>
-                                                <select id="ddlSubject" asp-for="SelectedCourse" asp-items="Model.CourseList" class="form-control"></select>
+                                                <select id="ddlSubject" asp-for="Course" asp-items="Model.CourseList" class="form-control"></select>
                                             </div>
                                         </div>
                                         <div class="col-md-4">
