--- a/CRM/Views/Student/List.cshtml
+++ b/CRM/Views/Student/List.cshtml
@@ -20,52 +20,60 @@
 
     <!-- Main content -->
     <section class="content">
-        <div class="container-fluid">
-            <div class="row">
-                <!-- left column -->
-                <div class="col-md-12">
 
-                    <!-- general form elements -->
-                    <div class="card card-primary">
+        <div class="card">
+            <div class="card-body">
+                <div class="dataTables_wrapper dt-bootstrap4">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <table id="example1" class="table table-bordered table-striped dataTable dtr-inline" role="grid" aria-describedby="example1_info">
+                                <thead>
+                                    <tr role="row">
+                                        <th class="sorting sorting_asc" style="width: 10px">#</th>
+                                        <th class="sorting">Student</th>
+                                        <th class="sorting">Class</th>
+                                        <th class="sorting">Course</th>
+                                        <th class="sorting">RegEx</th>
+                                        <th class="sorting">Caste</th>
+                                        <th class="sorting">MobileNo</th>
+                                        <th class="sorting">View</th>
+                                    </tr>
+                                </thead>
+
+                                <tbody>
+                                    @{
+                                        int i = 1;
+                                    }
+                                    @foreach (var item in Model)
+                                    {
+                                        <tr>
+                                            <td>@i</td>
+                                            <td>@item.StudentName</td>
+                                            <td>@item.Class</td>
+                                            <td>@item.Course</td>
+                                            <td>@item.RegEx</td>
+                                            <td>@item.Caste</td>
+                                            <td>@item.MobileNoOne</td>
+                                            <td>
+                                                <i class="fas fa-eye">
+                                                </i>
+                                            </td>
+                                        </tr>
+                                        i++;
+                                    }
+                                </tbody>
 
 
-                        <table class="table table-bordered">
-                            <thead>
-                                <tr>
-                                    <th style="width: 10px">#</th>
-                                    <th>Student</th>
-                                    <th>Class</th>
-                                    <th>Course</th>
-                                    <th>RegEx</th>
-                                    <th>Caste</th>
-                                    <th>MobileNo</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @{
-                                    int i = 1;
-                                }
-                                @foreach (var item in Model)
-                                {
-                                <tr>
-                                    <td>@i</td>
-                                    <td>@item.StudentName</td>
-                                    <td>@item.Class</td>
-                                    <td>@item.Course</td>
-                                    <td>@item.RegEx</td>
-                                    <td>@item.Caste</td>
-                                    <td>@item.MobileNoOne</td>
-                                </tr>
-                                    i++;
-                                }
-                            </tbody>
-                        </table>
-
-                    </div>
+                            </table>
+                        </div>
+                    </div><div class="row"><div class="col-sm-12 col-md-5"><div class="dataTables_info" id="example1_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div></div><div class="col-sm-12 col-md-7"><div class="dataTables_paginate paging_simple_numbers" id="example1_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="example1_previous"><a href="#" aria-controls="example1" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="example1" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="3" tabindex="0" class="page-link">3</a></li><li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="4" tabindex="0" class="page-link">4</a></li><li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="5" tabindex="0" class="page-link">5</a></li><li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="6" tabindex="0" class="page-link">6</a></li><li class="paginate_button page-item next" id="example1_next"><a href="#" aria-controls="example1" data-dt-idx="7" tabindex="0" class="page-link">Next</a></li></ul></div></div></div>
                 </div>
             </div>
-            <!-- /.row -->
-        </div><!-- /.container-fluid -->
+            <!-- /.card-body -->
+        </div>
+
+
+
     </section>
     <!-- /.content -->
 </div>
