worked on Fee section

--- a/CRM/Views/Course/Index.cshtml
+++ b/CRM/Views/Course/Index.cshtml
@@ -13,7 +13,7 @@
             <div class="row mb-2">
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-left">
-                        <li class="breadcrumb-item active"><a href="#">Course</a></li>
+                        <li class="breadcrumb-item active"><a href="#">Subject</a></li>
                     </ol>
                 </div>
             </div>
@@ -28,7 +28,7 @@
                 <div class="col-md-12">
 
                     <button type="button" class="btn btn-default" data-toggle="modal" data-target="#modal-default">
-                        Add new Course
+                        Add new Subject
                     </button>
 
                    
