--- a/CRM/Views/Shared/_MasterLayout.cshtml
+++ b/CRM/Views/Shared/_MasterLayout.cshtml
@@ -195,27 +195,33 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="../Master" class="nav-link">
+                                    <a href="../Year" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Class</p>
+                                        <p>Year</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="../Suject" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Subject</p>
+                                        <p>Course</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="../Course" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Course</p>
+                                        <p>Subject</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="../Fee/AddFee" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Add Fee</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="../Fee" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Fee Type</p>
+                                        <p>Fee List</p>
                                     </a>
                                 </li>
 
