--- a/CRM/Views/Suject/Index.cshtml
+++ b/CRM/Views/Suject/Index.cshtml
@@ -13,7 +13,7 @@
             <div class="row mb-2">
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-left">
-                        <li class="breadcrumb-item active"><a href="#">Subject</a></li>
+                        <li class="breadcrumb-item active"><a href="#">Course</a></li>
                     </ol>
                 </div>
             </div>
